# SCALE-MAMBA

./: .clang-format  .gitignore  CMakeLists.txt  CONFIG  Cargo.toml  Copyright-cpp.txt  Copyright-python.txt  Copyright-rust.txt  Copyright.txt  INSTRUCTIONS.txt  License.txt  Makefile  Player.x  README.md  README.txt  Setup.cpp  Setup.x  compile-mamba.py  compile-new.sh  compile-old.sh  compile-rust.sh  compile.py  compile.sh  run_tests.sh  scasm  shell.nix  stamp_copyright.sh
Assembler/: .gitignore  .gitrepo  Cargo.toml  Instructions.txt  Makefile  README.md
Assembler/Documentation/: .gitignore
Assembler/docker/ubuntu-build/: Dockerfile  build.sh  compile-scasm.sh  run.sh
Assembler/documentation_parser/: Cargo.toml
Assembler/documentation_parser/src/: lib.rs
Assembler/githooks/: install.sh
Assembler/githooks/pre-commit/: rustfmt
Assembler/src/: asm.rs  binary.rs  compiler.rs  cranelift.rs  errors.rs  lexer.rs  lib.rs  main.rs  span.rs  transforms.rs  visitor.rs
Assembler/src/asm/: augmented_block.rs  graphviz.rs  instructions.rs  parser.rs  relexer.rs  statement.rs
Assembler/src/binary/: instructions.rs
Assembler/src/lexer/: binary.rs  parser.rs  printer.rs
Assembler/src/transforms/: assignment_chain.rs  cmp.rs  cond_flip.rs  dce.rs  dead_block_removal.rs  destination_propagation.rs  goto_chain_collapse.rs  merge_instructions.rs  move_done_block_to_end.rs  nop.rs  nop_removal.rs  optimizer_step1.rs  print.rs  print_merge.rs  register_reuse.rs  validate.rs
Assembler/tests/: .gitignore  broken_asm.rs  crash.asm  doc-example.asm  gen_tex.rs  lex.rs  optimizations.rs  scasm-test_loop-0.asm  simple-O.asm  simple-U.asm  simple.mpc  tutorial-O.asm  tutorial-U.asm  wrong_branch.asm
Assembler/tests/broken_asm/: nojump.asm  nojump.stderr  nojump2.stderr  (+4 more)
Documentation/: .gitignore  Advanced.tex  ByteCodes.tex  Cargo.toml  Changes.tex  Compiler.tex  Documentation-SCALE.tex  Documentation.tex  Example.tex  FHE.tex  FigZKPoK.tex  GC.tex  IO.tex  Installation.tex  Introduction.tex  KeyGen.tex  Local.tex  Makefile  Mamba.tex  Restart.tex  SCALE.bib  documentation.rs  instructions.rs  symbols.tex  tocbibind.sty
Documentation/documentation_parser/: Cargo.toml
RustPrograms/: Cargo.toml  ToDO.txt
WebAssembly/: .gitignore  Cargo.toml  Notes.txt  README.md  add_new_author_to_crates_io.sh  create_new_test.sh  install-wasm-tools-root.sh  install-wasm-tools.sh  run_demo.sh  run_on_all_demos.sh
WebAssembly/scale/: Cargo.toml  build.rs
WebAssembly/scale_std/: Cargo.toml
WebAssembly/src/: error.rs  extern_call.rs  function_call.rs  instruction.rs  lib.rs  main.rs  stack.rs
src/: Api.cpp  CMakeLists.txt  Cargo.toml  Client-Api.cpp  Makefile  Player.cpp  Setup.cpp  build.rs  config.h
src/App/: App.cpp  App.h  Client.cpp  Client.h  Server.cpp  Server.h
src/Exceptions/: Exceptions.h  handler.cpp  handler.h
src/FHE/: Ciphertext.cpp  Ciphertext.h  Distributions.cpp  Distributions.h  FFT.cpp  FFT.h  FFT_Data.cpp  FFT_Data.h  FHE_Keys.cpp  FHE_Keys.h  FHE_Params.cpp  FHE_Params.h  Generator.h  Plaintext.cpp  Plaintext.h  README.txt  Random_Coins.cpp  Random_Coins.h  Ring.cpp  Ring.h  Ring_Element.cpp  Ring_Element.h  Rq_Element.cpp  Rq_Element.h  ZKPoK.cpp  ZKPoK.h
src/GC/: Base_Circuits.cpp  Base_Circuits.h  Circuit.cpp  Circuit.h  Garbled.cpp  Garbled.h  Q2_Evaluate.cpp  Q2_Evaluate.h  SimplifyCircuit.cpp  SimplifyCircuit.h
src/Input_Output/: IO.h  IO_Factory.cpp  IO_Factory.h  IO_Stream.cpp  IO_Stream.h  Input_Output_Base.cpp  Input_Output_Base.h  Input_Output_C.cpp  Input_Output_C.h  Input_Output_File.cpp  Input_Output_File.h  Input_Output_Simple.cpp  Input_Output_Simple.h  Input_Output_Test.cpp  Input_Output_Test.h
src/LSSS/: CAS.cpp  CAS.h  MSP.cpp  MSP.h  Open_Protocol.cpp  Open_Protocol.h  Open_Protocol2.cpp  Open_Protocol2.h  PRSS.cpp  PRSS.h  PRZS.cpp  PRZS.h  Schur_Matrices.cpp  Schur_Matrices.h  Share.cpp  Share.h  Share2.cpp  Share2.h  ShareData.cpp  ShareData.h  ShareData2.cpp  ShareData2.h
src/Local/: BLAS.cpp  BLAS.h  Float.cpp  Float.h  Local_Functions.cpp  Local_Functions.h
src/Math/: Integer.cpp  Integer.h  Matrix.cpp  Matrix.h  Zp_Data.cpp  Zp_Data.h  bigint.cpp  bigint.h  gf2.h  gf2n.cpp  gf2n.h  gfp.cpp  gfp.h  gfp.hpp  modp.cpp  modp.h  modp.hpp  mpn_routines.h
src/Mod2Engine/: Mod2Maurer.cpp  Mod2Maurer.h  Mod2_Thread.cpp  Mod2_Thread.h  aBitVector2.cpp  aBitVector2.h
src/OT/: BitMatrix.cpp  BitMatrix.h  BitVector.cpp  BitVector.h  COPE.cpp  COPE.h  COT.cpp  COT.h  CRS.cpp  CRS.h  DMC.cpp  DMC.h  HaAND.cpp  HaAND.h  LaAND.cpp  LaAND.h  OT_Thread.cpp  OT_Thread.h  OT_Thread_Data.h  ROT.cpp  ROT.h  SimpleROT.cpp  SimpleROT.h  aAND.cpp  aAND.h  aAND_Factory.cpp  aAND_Factory.h  aAND_Thread.cpp  aAND_Thread.h  aBit.cpp  aBit.h  aBitFactory.cpp  aBitFactory.h  aBitVector.cpp  aBitVector.h  aBit_Thread.cpp  aBit_Thread.h  exROT.cpp  exROT.h
src/Offline/: DABitGenerator.cpp  DABitGenerator.h  DABitMachine.cpp  DABitMachine.h  FHE_Factory.cpp  FHE_Factory.h  FakePrep.cpp  FakePrep.h  XOR_Machine.cpp  XOR_Machine.h  offline.cpp  offline.h  offline_FHE.cpp  offline_FHE.h  offline_IO_production.cpp  offline_IO_production.h  offline_Maurer.cpp  offline_Maurer.h  offline_Reduced.cpp  offline_Reduced.h  offline_data.cpp  offline_data.h  offline_phases.cpp  offline_phases.h  offline_subroutines.cpp  offline_subroutines.h  sacrifice.cpp  sacrifice.h
src/Online/: Machine.cpp  Machine.h  Online.cpp  Online.h  Schedule.cpp  Schedule.h
src/Processor/: Instruction.cpp  Instruction.h  Memory.cpp  Memory.h  Processor.cpp  Processor.h  Processor_IO.cpp  Processor_IO.h  Program.cpp  Program.h
src/System/: Init.cpp  Init.h  Networking.cpp  Networking.h  Player.cpp  Player.h  RunTime.cpp  RunTime.h  SystemData.cpp  SystemData.h
src/Tools/: CBC-MAC.cpp  CBC-MAC.h  Crypto.cpp  Crypto.h  MMO.cpp  MMO.h  MatrixMeasurement.h  Timer.cpp  Timer.h  aes-ni.cpp  aes.cpp  aes.h  avx_memcpy.h  buffer.h  cpu-support.h  ezOptionParser.h  int.h  parse.h  random.cpp  random.h  util_containers.cpp  util_containers.h
src/src/: lib.rs  scale_mamba_handler.rs
(+558 files in other folders)
