[package]
name = "scasm"
version = "0.1.0"
authors = ["Oliver Scherer <oliver.scherer@cosmian.com>"]
edition = "2018"
description = "A SCALE assembly optimizer"
license = "MIT AND Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
annotate-snippets = { git = "https://github.com/rust-lang/annotate-snippets-rs.git", features = ["ansi_term"] }
pretty_assertions = "0.6.1"
v_htmlescape = "0.4.5"
# waitign for https://github.com/Manishearth/elsa/pull/8 to get merged
elsa = { version = "1.3.2", git = "https://github.com/oli-cosmian/elsa.git" }
cranelift-codegen = "0.46.1"
cranelift-frontend = "0.46.1"
target-lexicon = "0.8.1"
tracing = "0.1.0"
tracing-log = "0.1"
tracing-subscriber = "0.1.5"
lazy_static = "1.0"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
parse-display = "0.1.1"
escargot = "0.5"
documentation_parser = { path = "documentation_parser" }

[patch.crates-io]
# waiting for https://github.com/Storyyeller/stable_deref_trait/pull/8 to get merged
stable_deref_trait = { version = "1.1.1", git = "https://github.com/oli-cosmian/stable_deref_trait.git"}
