[package]
name = "scasm"
version = "0.1.0"
authors = ["Oliver Scherer <oliver.scherer@cosmian.com>"]
edition = "2018"
description = "A SCALE assembly optimizer"
license = "MIT AND Apache-2.0"
default-run = "scasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
annotate-snippets = { git = "https://github.com/rust-lang/annotate-snippets-rs.git", features = ["color"], rev = "dd3a5ca28103d5f8ba91d7f0bf77811d485796f3" }
pretty_assertions = "0.6.1"
v_htmlescape = "0.4.5"
elsa = "1.3.2"
tracing = "0.1.0"
tracing-log = "0.1"
tracing-subscriber = "0.2.5"
lazy_static = "1.0"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
parse-display = "0.1.1"
escargot = "0.5"
documentation = { package = "scale_documentation", path = "../Documentation" }
tracing-tree = "0.1.6"
