[package]
name = "rust_programs"
version = "0.1.0"
authors = ["Oliver Scherer <oliver.scherer@cosmian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale = { package = "scale-core", path = "../WebAssembly/scale"}
scale_std = {path = "../WebAssembly/scale_std"}

[features]
emulate = ["scale/emulate", "scale_std/emulate"]

[profile.dev]
overflow-checks = false

[profile.release]
# Note: Do not set `debug = true`, `wasm-opt` dies horribly if you do.
panic = "abort"
# LTO really cleans up the amount of wasm that is generated
lto = true
codegen-units = 1

[workspace]
