[package]
name = "scale-binaries"
version = "0.1.0"
authors = ["Oliver Scherer <oliver.scherer@cosmian.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.2"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
tracing = "0.1.22"

[build-dependencies]
cc = "1.0.61"
eyre = "0.6.2"
glob = "0.3.0"
pkg-config = "0.3.19"
