[package]
name = "documentation_parser"
version = "0.1.0"
authors = ["Oliver Scherer <oliver.scherer@cosmian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"
