[package]
name = "scale-core"
version = "0.1.2"
authors = ["Oliver Scherer <oliver.scherer@cosmian.com>", "Nigel P. Smart", "Benjamin Coenen <benjamin.coenen@cosmian.com>"]
edition = "2018"
description = "low level datastructures and functionality for compiling for SCALE via wasm"
license-file = "../../License.txt"
repository = "https://github.com/KULeuven-COSIC/SCALE-MAMBA"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale_impl_generator = { version = "0.1.2", path = "impl_generator"}
lazy_static = { version = "1.4", optional = true }
num-bigint = { version = "0.3.0", optional = true }
num-integer = { version = "0.1.43", optional = true }
num-traits = { version = "0.2.12", optional = true }
rand = { version = "0.8.3", optional = true }

[features]
emulate = ["lazy_static", "num-bigint", "num-integer", "num-traits", "rand"]

[profile.release]
# Note: Do not set `debug = true`, `wasm-opt` dies horribly if you do.
panic = "abort"
# LTO really cleans up the amount of wasm that is generated
lto = true
codegen-units = 1

[workspace]
